--- a/sectionadapter/build.gradle
+++ b/sectionadapter/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group = 'com.github.JunsuLime'
 
 android {
     compileSdkVersion 25
@@ -22,6 +25,5 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support:recyclerview-v7:25.3.0'
 }
