--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -24,11 +24,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
 
-    debugCompile project(':sectionadapter')
+    compile 'com.github.JunsuLime:Android-RecyclerView-SectionAdapter:v0.1.0'
 }
